--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-winston": "^4.0.2",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": ">=5.7.5",
+    "mongoose": "^4.13.20",
     "validator": "^12.1.0",
     "winston": "^3.2.1"
   },
